# aalgocpp

./: .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  biicode.conf  build.sh  get_deps.sh  lint_and_analyze.sh
src/: arithmetic.cpp  arithmetic.hpp  cycle.cpp  cycle.hpp  main.cpp  scheduling.cpp  scheduling.hpp  singleList.cpp  singleList.hpp  sorting.cpp  sorting.h  sorting.hpp  strings.cpp  strings.hpp
tests/: arithmetic.tests.cpp  cycle.tests.cpp  scheduling.tests.cpp  singleList.tests.cpp  sorting.tests.cpp  strings.tests.cpp  tools_tests.cpp
